--- a/andflare/search-page.html
+++ b/andflare/search-page.html
@@ -54,7 +54,7 @@
                         type="search"
                         autofocus=""
                         autocomplete="off"
-                        placeholder="Search Andflare"
+                        placeholder="Find what they do"
                       />
                     </span>
                   </div>
@@ -104,7 +104,7 @@
                           type="search"
                           autofocus=""
                           autocomplete="off"
-                          placeholder="Search Andflare"
+                          placeholder="Find what they do"
                         />
                       </span>
                     </div>
